--- a/firstproject.html
+++ b/firstproject.html
@@ -1,14 +1,18 @@
-# Projects
 <!doctype html>
 <html lang="en">
 
   <meta charset="utf-8">
   <title>Davon's first webpage</title>
 
-<body>
-<article>
-  <h1>ABOUT ME</h1>
+<section>
+  <header>
+    <h1>ABOUT ME</h1>
+  </header>
   <p>My name is Davon Branch and I am an Information Technology and Management major at Illinois Institute of Technology. I am 19 years old.</p>
-</article>
-</body>
+</section>
+<section>
+  <header>
+    <h2>BIRTHDAY</h2>
+  </header>
+  <p>February 2 AQUARIUS</p>
 </html>
