changed stuff around

--- a/firstproject.html
+++ b/firstproject.html
@@ -8,11 +8,11 @@
   <header>
     <h1>ABOUT ME</h1>
   </header>
-  <p>My name is Davon Branch and I am an Information Technology and Management major at Illinois Institute of Technology. I am 19 years old.</p>
+  <p>My name is Davon Branch and I am an Information Technology and Management major at Illinois Institute of Technology.</p>
 </section>
-<section>
   <header>
     <h2>BIRTHDAY</h2>
   </header>
   <p>February 2 AQUARIUS</p>
+  <p>19 years old</p>
 </html>
