--- a/firstproject.html
+++ b/firstproject.html
@@ -3,7 +3,6 @@
 
   <meta charset="utf-8">
   <title>Davon's first webpage</title>
-
 <section>
   <header>
     <h1>ABOUT ME</h1>
@@ -15,4 +14,13 @@
   </header>
   <p>February 2 AQUARIUS</p>
   <p>19 years old</p>
+  <header>
+    <h3>WHAT I LIKE TO DO</h3>
+  </header>
+  <p>Learn new skills</p>
+  <p>Play trumpet</p>
+  <p>Explore new things</p>
+  <p>Swim</p>
+  <p>Take pictures</p>
+  <p>Eat</p>
 </html>
