new edition with an added header

--- a/firstproject.html
+++ b/firstproject.html
@@ -3,11 +3,14 @@
 
   <meta charset="utf-8">
   <title>Davon's first webpage</title>
+  <nav>
+  <a href="https://www.facebook.com/DavonABranch">Facebook</a>
 <section>
   <header>
     <h1>ABOUT ME</h1>
   </header>
-  <p>My name is Davon Branch and I am an Information Technology and Management major at Illinois Institute of Technology.</p>
+  <p>My name is Davon Branch</p>
+  <p>I am an Information Technology and Management major at Illinois Institute of Technology.</p>
 </section>
   <header>
     <h2>BIRTHDAY</h2>
@@ -19,8 +22,14 @@
   </header>
   <p>Learn new skills</p>
   <p>Play trumpet</p>
+  <p>Watch movies</p>
   <p>Explore new things</p>
   <p>Swim</p>
   <p>Take pictures</p>
-  <p>Eat</p>
+  <p>Listem to music</p>
+  <header>
+    <h4>ACCOMPLISHMENTS</h4>
+  </header>
+  <p>Illinois State Scholar</p>
+  <p>Dean's List for Fall and Spring Semester</p>
 </html>
