added a closing tag

--- a/firstproject.html
+++ b/firstproject.html
@@ -5,6 +5,7 @@
   <title>Davon's first webpage</title>
   <nav>
   <a href="https://www.facebook.com/DavonABranch">Facebook</a>
+  </nav>
 <section>
   <header>
     <h1>ABOUT ME</h1>
