--- a/firstproject.html
+++ b/firstproject.html
@@ -1,53 +1,49 @@
 <!doctype html>
 <html lang="en">
-<meta charset="utf-8">
-<title>Davon's first webpage</title>
-    <nav>
-    <a href="https://www.facebook.com/DavonABranch">Facebook</a>
-    </nav>
+<head>
+  <meta charset="utf-8"/>
+  <title>Davon's first webpage</title>
+</head>
+<body>
+  <nav>
+    <div id="button"><a href="firstproject.html">Intro</a>
+    <a href="resume.html">Resume</a>
+    <a href="goals.html">Goals</a></div>
+  </nav>
 <section>
-<img src="https://images-na.ssl-images-amazon.com/images/I/71NRpx583UL._SL1500_.jpg" width="128" height="128" alt="amazon.com">
-<img src="https://pbs.twimg.com/media/DDcpmMmUQAA5sx0.jpg" width="200" height="200" alt="davon">
-<img src="https://upload.wikimedia.org/wikipedia/en/6/66/Transformers07.jpg" width="180" height="180" alt="favorite movie">
-<img src="https://www.nbc.com/sites/nbcunbc/files/files/styles/640x360/public/images/2016/9/14/SVU-AboutImage-1920x1080-KO.jpg?itok=FxqgYEYd" width="180" height="180" alt="favorite tv show">
-<header>
+  <img src="https://images-na.ssl-images-amazon.com/images/I/71NRpx583UL._SL1500_.jpg" alt="amazon.com"/>
+  <img src="https://upload.wikimedia.org/wikipedia/en/6/66/Transformers07.jpg" alt="favorite movie"/>
+  <img src="https://www.nbc.com/sites/nbcunbc/files/files/styles/640x360/public/images/2016/9/14/SVU-AboutImage-1920x1080-KO.jpg?itok=FxqgYEYd" alt="favorite tv show"/>
+  <header>
     <h1>ABOUT ME</h1>
-</header>
-<ul>
-    <li>My name is Davon Branch</li>
-    <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
-    <li>Hometown:Bellwood, IL (South Suburb)</li>
-</ul>
+  </header>
+    <ul>
+      <li>My name is Davon Branch</li>
+      <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
+      <li>Hometown:Bellwood, IL (South Suburb)</li>
+    </ul>
 </section>
 <section>
-<header>
+  <header>
     <h2>BIRTHDAY</h2>
-</header>
-<ul>
-    <li>February 2 AQUARIUS</li>
-</ul>
+  </header>
+    <ul>
+      <li>February 2 AQUARIUS</li>
+  </ul>
 </section>
 <section>
-<header>
+  <header>
     <h3>WHAT I LIKE TO DO</h3>
-</header>
-<ul>
-    <li>Learn new skills</li>
-    <li>Play trumpet</li>
-    <li>Watch movies</li>
-    <li>Explore new things</li>
-    <li>Swim</li>
-    <li>Take pictures</li>
-    <li>Listen to music</li>
-</ul>
+  </header>
+    <ul>
+      <li>Learn new skills</li>
+      <li>Play trumpet</li>
+      <li>Watch movies</li>
+      <li>Explore new things</li>
+      <li>Swim</li>
+      <li>Take pictures</li>
+      <li>Listen to music</li>
+    </ul>
 </section>
-<section>
-<header>
-    <h4>ACCOMPLISHMENTS</h4>
-</header>
-<ul>
-    <li>Illinois State Scholar</li>
-    <li>Dean's List for Fall and Spring Semester</li>
-</ul>
-</section>
+</body>
 </html>
