--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <nav>
-    <div id="button"><a href="firstproject.html">Intro</a>
+    <div id="button"><a href="index.html">Intro</a>
     <a href="resume.html">Resume</a>
     <a href="goals.html">Goals</a></div>
   </nav>
