--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <a href="goals.html">Goals</a></div>
   </nav>
 <section>
-  <img src="https://images-na.ssl-images-amazon.com/images/I/71NRpx583UL._SL1500_.jpg" alt="amazon.com"/>
+  <img src="http://www.amromusic.com/assets/1942/7_trumpet-1.jpg" style="display:block" alt="amazon.com"/>
   <img src="https://upload.wikimedia.org/wikipedia/en/6/66/Transformers07.jpg" alt="favorite movie"/>
-  <img src="https://www.nbc.com/sites/nbcunbc/files/files/styles/640x360/public/images/2016/9/14/SVU-AboutImage-1920x1080-KO.jpg?itok=FxqgYEYd" alt="favorite tv show"/>
+  <img src="https://www.nbc.com/sites/nbcunbc/files/files/styles/640x360/public/images/2016/9/14/SVU-AboutImage-1920x1080-KO.jpg?itok=FxqgYEYd" style="display:block" alt="favorite tv show"/>
   <header>
     <h1>ABOUT ME</h1>
   </header>
