changed img format

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <a href="resume.html">Resume</a>
     <a href="goals.html">Goals</a></div>
   </nav>
-  <img src="http://www.adaicon.com/sites/default/files/articles/201704/20283-local-students-names-onu-deans-list.jpg" alt="deanslist"/>
+  <img src="http://www.adaicon.com/sites/default/files/articles/201704/20283-local-students-names-onu-deans-list.jpg" style="display:block" alt="deanslist"/>
 <section>
   <header>
     <h1>Education</h1>
