--- a/Resume/index.html
+++ b/Resume/index.html
@@ -9,8 +9,8 @@
   <h1>Davon Branch</h1>
     <nav>
       <ul>
-        <li><a href="">Home<a/></li>
-        <li><a href="/resume/">Resume<a/></li>
+        <li><a href="">Home</a></li>
+        <li><a href="/resume/">Resume</a></li>
         <li><a href="/goals/">Goals</a></li>
       </ul>
     </nav>
