--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <title>Davon's first webpage</title>
 </head>
 <body>
-  <nav>
-    <div id="button"><a href="index.html">Intro</a>
-    <a href="resume.html">Resume</a>
-    <a href="goals.html">Goals</a></div>
-  </nav>
+  <header id="header">
+    <h1>Davon Branch</h1>
+    <nav>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="/resume/">Resume</a></li>
+        <li><a href="/goals/">Goals</a></li>
+      </ul>
+    </nav>
+  </header>
+<main>
 <section>
   <img src="http://www.amromusic.com/assets/1942/7_trumpet-1.jpg" style="display:block" alt="amazon.com"/>
   <img src="https://upload.wikimedia.org/wikipedia/en/6/66/Transformers07.jpg" alt="favorite movie"/>
@@ -45,5 +51,7 @@
       <li>Listen to music</li>
     </ul>
 </section>
+</main>
 </body>
 </html>
+
