--- a/Resume/index.html
+++ b/Resume/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Davon's first webpage</title>
+  <title>Resume</title>
 </head>
 <body>
   <header id="header">
-  <h1>Davon Branch</h1>
+    <h1>Davon Branch</h1>
     <nav>
       <ul>
         <li><a href="">Home</a></li>
@@ -16,42 +16,47 @@
     </nav>
   </header>
 <main>
+  <img src="http://www.adaicon.com/sites/default/files/articles/201704/20283-local-students-names-onu-deans-list.jpg" style="display:block" alt="deanslist"/>
 <section>
-  <img src="http://www.amromusic.com/assets/1942/7_trumpet-1.jpg" style="display:block" alt="amazon.com"/>
-  <img src="https://upload.wikimedia.org/wikipedia/en/6/66/Transformers07.jpg" alt="favorite movie"/>
-  <img src="https://www.nbc.com/sites/nbcunbc/files/files/styles/640x360/public/images/2016/9/14/SVU-AboutImage-1920x1080-KO.jpg?itok=FxqgYEYd" style="display:block" alt="favorite tv show"/>
   <header>
-    <h1>ABOUT ME</h1>
+    <h1>Education</h1>
   </header>
     <ul>
-      <li>My name is Davon Branch</li>
-      <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
-      <li>Hometown:Bellwood, IL (South Suburb)</li>
+      <li>Illinois Institute of Technology, 2016-2020</li>
+      <li>Proviso West High School, 2013-2016</li>
     </ul>
 </section>
 <section>
   <header>
-    <h2>BIRTHDAY</h2>
+    <h2>Work experience</h2>
   </header>
     <ul>
-      <li>February 2 AQUARIUS</li>
-  </ul>
+      <li>Junior Lab Technician for School of Applied Technology, present</li>
+    </ul>
 </section>
 <section>
   <header>
-    <h3>WHAT I LIKE TO DO</h3>
+    <h3>Accomplishments</h3>
   </header>
     <ul>
-      <li>Learn new skills</li>
-      <li>Play trumpet</li>
-      <li>Watch movies</li>
-      <li>Explore new things</li>
-      <li>Swim</li>
-      <li>Take pictures</li>
-      <li>Listen to music</li>
+      <li>Dean's List for Fall 2016 and Spring 2017 semester</li>
+      <li>Illinois State Scholar during senior year in high school</li>
+      <li>Section leader of trumpet section in marching band</li>
+    </ul>
+</section>
+<section>
+  <header>
+    <h4>Traits</h4>
+  </header>
+    <ul>
+      <li>Hardworking</li>
+      <li>Determined</li>
+      <li>Confident</li>
+      <li>Honest</li>
+      <li>Loyal</li>
+      <li>Team player</li>
     </ul>
 </section>
 </main>
 </body>
 </html>
-
