--- a/Goals/index.html
+++ b/Goals/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Davon's first webpage</title>
+  <title>Goals</title>
 </head>
 <body>
   <header id="header">
@@ -17,38 +17,16 @@
   </header>
 <main>
 <section>
-  <img src="http://www.amromusic.com/assets/1942/7_trumpet-1.jpg" style="display:block" alt="amazon.com"/>
-  <img src="https://upload.wikimedia.org/wikipedia/en/6/66/Transformers07.jpg" alt="favorite movie"/>
-  <img src="https://www.nbc.com/sites/nbcunbc/files/files/styles/640x360/public/images/2016/9/14/SVU-AboutImage-1920x1080-KO.jpg?itok=FxqgYEYd" style="display:block" alt="favorite tv show"/>
   <header>
-    <h1>ABOUT ME</h1>
+    <h1>Life Goals</h1>
   </header>
     <ul>
-      <li>My name is Davon Branch</li>
-      <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
-      <li>Hometown:Bellwood, IL (South Suburb)</li>
-    </ul>
-</section>
-<section>
-  <header>
-    <h2>BIRTHDAY</h2>
-  </header>
-    <ul>
-      <li>February 2 AQUARIUS</li>
-  </ul>
-</section>
-<section>
-  <header>
-    <h3>WHAT I LIKE TO DO</h3>
-  </header>
-    <ul>
-      <li>Learn new skills</li>
-      <li>Play trumpet</li>
-      <li>Watch movies</li>
-      <li>Explore new things</li>
-      <li>Swim</li>
-      <li>Take pictures</li>
-      <li>Listen to music</li>
+      <li>Graduate with a Master's in ITM, specializing in System Administration.</li>
+      <li>Start my career as soon as I graduate college</li>
+      <li>Become the most dedicated worker in my field, learning new skills everyday</li>
+      <li>Pay off my student loans ASAP</li>
+      <li>Start a family!</li>
+      <li>Retire at a reasonable age and travel the world with my family</li>
     </ul>
 </section>
 </main>
