--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <nav>
       <ul>
         <li><a href="">Home</a></li>
-        <li><a href="resume/">Resume</a></li>
-        <li><a href="goals/">Goals</a></li>
+        <li><a href="/resume/">Resume</a></li>
+        <li><a href="/goals/">Goals</a></li>
       </ul>
     </nav>
   </header>
