new image tag inserted and edited header formatting

--- a/index.html
+++ b/index.html
@@ -5,36 +5,39 @@
   <title>Davon's first webpage</title>
 </head>
 <body>
-  <nav>
-    <div id="button"><a href="index.html">Intro</a>
-    <a href="resume.html">Resume</a>
-    <a href="goals.html">Goals</a></div>
-  </nav>
-<section>
-  <img src="http://www.amromusic.com/assets/1942/7_trumpet-1.jpg" style="display:block" alt="amazon.com"/>
-  <img src="https://upload.wikimedia.org/wikipedia/en/6/66/Transformers07.jpg" alt="favorite movie"/>
-  <img src="https://www.nbc.com/sites/nbcunbc/files/files/styles/640x360/public/images/2016/9/14/SVU-AboutImage-1920x1080-KO.jpg?itok=FxqgYEYd" style="display:block" alt="favorite tv show"/>
-  <header>
-    <h1>ABOUT ME</h1>
+  <header id="header">
+    <h1>Davon Branch</h1>
+    <nav>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a>"resume/">Resume</a></li>
+        <li><a>="goals/">Goals</a></li>
+      </ul>
+     </nav>
   </header>
+<main>
+  <section>
+    <header>
+      <h2>ABOUT ME</h2>
+    </header>
     <ul>
       <li>My name is Davon Branch</li>
       <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
       <li>Hometown:Bellwood, IL (South Suburb)</li>
     </ul>
-</section>
-<section>
-  <header>
-    <h2>BIRTHDAY</h2>
-  </header>
+  </section>
+  <section>
+    <header>
+      <h3>BIRTHDAY</3>
+    </header>
     <ul>
       <li>February 2 AQUARIUS</li>
-  </ul>
-</section>
-<section>
-  <header>
-    <h3>WHAT I LIKE TO DO</h3>
-  </header>
+    </ul>
+  </section>
+  <section>
+    <header>
+      <h4>WHAT I LIKE TO DO</h4>
+    </header>
     <ul>
       <li>Learn new skills</li>
       <li>Play trumpet</li>
@@ -43,7 +46,20 @@
       <li>Swim</li>
       <li>Take pictures</li>
       <li>Listen to music</li>
+      <li>Vaction in Florida</li>
     </ul>
-</section>
+    <figure>
+      <img src="clearwater.JPG" alt="Pic of palm trees"/>
+      <figcaption>
+        Scenery of Clear Water Beach, Florida.
+      </figcaption>
+    </figure>
+    <figure>
+      <img src="water.JPG" alt="Arriving to the beach"/>
+      <figcaption>
+        A picture of us arriving to the beach front.
+      </figcaption>
+    </figure>
+  </section>
 </body>
 </html>
