changed numbers on headers and format of 1st section

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
@@ -9,17 +9,16 @@
     <h1>Davon Branch</h1>
     <nav>
       <ul>
-        <li><a href="../">Home</a></li>
+        <li><a href="../">Home</a></l>
         <li><a href="../resume/">Resume</a></li>
         <li><a href="../goals/">Goals</a></li>
       </ul>
-    </nav>
-  </header>
-<main>
-  <img src="http://www.adaicon.com/sites/default/files/articles/201704/20283-local-students-names-onu-deans-list.jpg" style="display:block" alt="deanslist"/>
+     </nav>
+   </header>
+  <img src="http://www.adaicon.com/sites/default/files/articles/201704/20283-local-students-names-onu-deans-list.jpg" alt="deanslist"/>
 <section>
   <header>
-    <h1>Education</h1>
+    <h2>Education</h2>
   </header>
     <ul>
       <li>Illinois Institute of Technology, 2016-2020</li>
@@ -28,7 +27,7 @@
 </section>
 <section>
   <header>
-    <h2>Work experience</h2>
+    <h3>Work experience</h3>
   </header>
     <ul>
       <li>Junior Lab Technician for School of Applied Technology, present</li>
@@ -36,7 +35,7 @@
 </section>
 <section>
   <header>
-    <h3>Accomplishments</h3>
+    <h4>Accomplishments</h4>
   </header>
     <ul>
       <li>Dean's List for Fall 2016 and Spring 2017 semester</li>
@@ -46,7 +45,7 @@
 </section>
 <section>
   <header>
-    <h4>Traits</h4>
+    <h5>Traits</h5>
   </header>
     <ul>
       <li>Hardworking</li>
