--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Davon's first webpage</title>
+  <link href="screen.css" />
 </head>
 <body>
   <header id="header">
