--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <title>Davon's first webpage</title>
-  <link href="screen.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+  <link rel="stylesheet" href="screen.css"/>
 </head>
 <body>
   <header id="header">
