changed format of headers

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </section>
   <section>
     <header>
-      <h3>BIRTHDAY</3>
+      <h3>BIRTHDAY</h3>
     </header>
     <ul>
       <li>February 2 AQUARIUS</li>
@@ -38,7 +38,7 @@
   </section>
   <section>
     <header>
-      <h4>WHAT I LIKE TO DO</h4>
+      <h3>WHAT I LIKE TO DO</h3>
     </header>
     <ul>
       <li>Learn new skills</li>
