updated errors with unclosed tags

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
-<doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
@@ -9,12 +9,12 @@
     <h1>Davon Branch</h1>
     <nav>
       <ul>
-        <li><a href="../">Home</a></l>
+        <li><a href="../">Home</a></li>
         <li><a href="../resume/">Resume</a></li>
         <li><a href="../goals/">Goals</a></li>
       </ul>
-     </nav>
-   </header>
+    </nav>
+  </header>
 <main>
   <section>
     <header>
