added end tag for h3

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </section>
   <section>
     <header>
-      <h3>BIRTHDAY</3>
+      <h3>BIRTHDAY</h3>
     </header>
     <ul>
       <li>February 2 AQUARIUS</li>
