changed title of home page to include my name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Davon's first webpage</title>
+  <title>ABOUT DAVON</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" href="screen.css"/>
 </head>
