changed title of webpage to include my name

--- a/goals/index.html
+++ b/goals/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Goals</title>
+  <title>DAVON'S GOALS</title>
 </head>
 <body>
   <header id="header">
