changed title of webpage to include my name and subject of webpage

--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Resume</title>
+  <title>DAVON'S RESUME</title>
 </head>
 <body>
   <header id="header">
