--- a/resume/index.html
+++ b/resume/index.html
@@ -18,39 +18,63 @@
     </nav>
   </header>
 <main>
-  <header>
-    <h2>RESUME</h2>
-  </header>
+  <h2>RESUME</h2>
   <section>
-    <header>
-      <h3>Education</h3>
+    <h3>Education</h3>
       <ul>
-        <li>Illinois Institute of Technology, 2016-2020</li>
-        <li>Proviso West High School, 2013-2016</li>
+        <li>Illinois Institute of Technology
+          <ul>
+            <li>GPA:3.8</li>
+            <li>Expected Graduation: Spring 2020</li>
+          </ul>
+        </li>
+        <li>Proviso West High School, 2013-2016
+          <ul>
+            <li>GPA:3.9</li>
+            <li>Graduated: May 2016</li>
+          </ul>
+        </li>
       </ul>
   </section>
   <section>
-    <header>
-      <h3>Work experience</h3>
-    </header>
+    <h3>Work experience</h3>
     <ul>
-      <li>Junior Lab Technician for School of Applied Technology, present</li>
+      <li>Junior Lab Assisstant for School of Applied Technology
+        <ul>
+          <li>Swap hard drives for different classes during the day</li>
+          <li>Help students with computer problems</li>
+          <li>Work with different workstations/servers like FOG</li>
+          <li>Organize and clean storage and lab</li>
+        </ul>
+      </li>
     </ul>
   </section>
   <section>
-    <header>
-      <h3>Accomplishments</h3>
-    </header>
+    <h3>Accomplishments</h3>
     <ul>
-      <li>Dean's List for Fall 2016 and Spring 2017 semester</li>
-      <li>Illinois State Scholar during senior year in high school</li>
-      <li>Section leader of trumpet section in marching band</li>
+      <li>Dean's List
+        <ul>
+          <li>Fall 2016 and Spring 2017 semester</li>
+          <li>Awarded to students whose semester GPA is 3.50 or better</li>
+        </ul>
+      </li>
+      <li>Illinois State Scholar
+        <ul>
+          <li>Senior year of high school</li>
+          <li>Awarded to students who ranked top 10 of their class</li>
+        </ul>
+      </li>
+      <li>Section leader of trumpet section
+        <ul>
+          <li>Senior year of high school</li>
+          <li>Awarded to someone that shows excellent skills on their instrument</li>
+          <li>Attends practice daily and performances</li>
+        </ul>
+      </li>
     </ul>
   </section>
   <section>
-    <header>
-      <h3>Traits</h3>
-    </header>
+    <h3>Traits</h3>
     <ul>
       <li>Hardworking</li>
       <li>Determined</li>
