deleted the <header> tags in all the different sections

--- a/index.html
+++ b/index.html
@@ -18,28 +18,23 @@
     </nav>
   </header>
 <main>
+  <h2>ABOUT ME</h2>
   <section>
-    <header>
-      <h2>ABOUT ME</h2>
-    </header>
+    <h3>Introduction</h3>
     <ul>
       <li>My name is Davon Branch</li>
       <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
-      <li>Hometown:Bellwood, IL (South Suburb)</li>
+      <li>Hometown: Bellwood, IL (West Suburb)</li>
     </ul>
   </section>
   <section>
-    <header>
       <h3>BIRTHDAY</h3>
-    </header>
     <ul>
       <li>February 2 AQUARIUS</li>
     </ul>
   </section>
   <section>
-    <header>
-      <h3>WHAT I LIKE TO DO</h3>
-    </header>
+    <h3>WHAT I LIKE TO DO</h3>
     <ul>
       <li>Learn new skills</li>
       <li>Play trumpet</li>
