--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <main>
   <h2>ABOUT ME</h2>
   <section>
-    <h3>Introduction</h3>
+    <h3>INTRODUCTION</h3>
     <ul>
       <li>My name is Davon Branch</li>
       <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
