added id attribute to nav tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="header">
     <h1>Davon Branch</h1>
-    <nav>
+    <nav id="navigation">
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="resume/">Resume</a></li>
@@ -17,20 +17,20 @@
       </ul>
     </nav>
   </header>
-<main>
+<main id="content">
   <h2>ABOUT ME</h2>
   <section>
     <h3>INTRODUCTION</h3>
     <ul>
       <li>My name is Davon Branch</li>
-      <li>I am an Information Technology and Management major at Illinois Institute of Technology.</li>
+      <li>I am a second year Information Technology and Management major at Illinois Institute of Technology.</li>
       <li>Hometown: Bellwood, IL (West Suburb)</li>
     </ul>
   </section>
   <section>
-      <h3>BIRTHDAY</h3>
+    <h3>BIRTHDAY</h3>
     <ul>
-      <li>February 2 AQUARIUS</li>
+      <li>February 2nd</li>
     </ul>
   </section>
   <section>
@@ -60,8 +60,7 @@
   </section>
 </main>
 <footer id="footer">
-  By Davon Branch
-  Contact me @dbranch2@hawk.iit.edu
+  <p>By Davon Branch Contact me @dbranch2@hawk.iit.edu</p>
 </footer>
 </body>
 </html>
