added section and header for images

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       <li>Listen to music</li>
       <li>Vaction in Florida</li>
     </ul>
+  </section>
+  <section>
+    <h3>PICTURES</h3>
     <figure>
       <img src="clearwater.JPG" alt="Pic of palm trees"/>
       <figcaption>
