added information to my what I like to do section

--- a/index.html
+++ b/index.html
@@ -17,53 +17,64 @@
       </ul>
     </nav>
   </header>
-<main id="content">
-  <h2>ABOUT ME</h2>
-  <section>
-    <h3>INTRODUCTION</h3>
-    <ul>
-      <li>My name is Davon Branch</li>
-      <li>I am a second year Information Technology and Management major at Illinois Institute of Technology.</li>
-      <li>Hometown: Bellwood, IL (West Suburb)</li>
-    </ul>
-  </section>
-  <section>
-    <h3>BIRTHDAY</h3>
-    <ul>
-      <li>February 2nd</li>
-    </ul>
-  </section>
-  <section>
-    <h3>WHAT I LIKE TO DO</h3>
-    <ul>
-      <li>Learn new skills</li>
-      <li>Play trumpet</li>
-      <li>Watch movies</li>
-      <li>Explore new things</li>
-      <li>Swim</li>
-      <li>Take pictures</li>
-      <li>Listen to music</li>
-      <li>Vaction in Florida</li>
-    </ul>
-  </section>
-  <section>
-    <h3>PICTURES</h3>
-    <figure>
-      <img src="clearwater.JPG" alt="Pic of palm trees"/>
-      <figcaption>
-        Scenery of Clear Water Beach, Florida.
-      </figcaption>
-    </figure>
-    <figure>
-      <img src="water.JPG" alt="Arriving to the beach"/>
-      <figcaption>
-        A picture of us arriving to the beach front.
-      </figcaption>
-    </figure>
-  </section>
-</main>
-<footer id="footer">
-  <p>By Davon Branch Contact me @dbranch2@hawk.iit.edu</p>
-</footer>
+  <main id="content">
+    <h2>ABOUT ME</h2>
+    <section>
+      <h3>INTRODUCTION</h3>
+      <ul>
+        <li>My name is Davon Branch</li>
+        <li>I am a second year Information Technology and Management major at Illinois Institute of Technology.</li>
+        <li>Hometown: Bellwood, IL (West Suburb)</li>
+      </ul>
+    </section>
+    <section>
+      <h3>WHAT I LIKE TO DO</h3>
+      <ul>
+        <li>Learn new skills</li>
+        <li>Play trumpet
+          <ul>
+            <li>I played in marching band for three years</li>
+          </ul>
+        </li>
+        <li>Watch my favorite movies and tv shows
+          <ul>
+            <li>Law and Order:SVU, Empire, Transformers, Star</li>
+          </ul>
+        </li>
+        <li>Explore new things</li>
+        <li>Swim</li>
+        <li>Take pictures
+          <ul>
+            <li>I was apart of a modeling group during the summer</li>
+            <li>I also like taking pictures of beautiful scenery</li>
+          </ul>
+        </li>
+        <li>Listen to music
+          <ul>
+            <li>Gospel, RandB, Hip-Hop, and a little bit of Pop</li>
+          </ul>
+        </li>
+        <li>Vacation, especially in Florida</li>
+      </ul>
+    </section>
+    <section>
+      <h3>PICTURES</h3>
+      <figure>
+        <img src="clearwater.JPG" alt="Pic of palm trees"/>
+        <figcaption>
+          Scenery of Clear Water Beach, Florida.
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="water.JPG" alt="Arriving to the beach"/>
+        <figcaption>
+          A picture of us arriving to the beach front.
+        </figcaption>
+      </figure>
+    </section>
+  </main>
+  <footer id="footer">
+    <p>By Davon Branch Contact me @dbranch2@hawk.iit.edu</p>
+  </footer>
 </body>
 </html>
