--- a/goals/index.html
+++ b/goals/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="header">
     <h1>Davon Branch</h1>
-    <nav>
+    <nav id="navigation">
       <ul>
         <li><a href="../">Home</a></li>
         <li><a href="../resume/">Resume</a></li>
@@ -17,9 +17,9 @@
       </ul>
     </nav>
   </header>
-<main>
-  <section>
-      <h2>Life Goals</h2>
+  <main id="content">
+    <section>
+      <h2>LIFE GOALS</h2>
       <ul>
         <li>Graduate with a Master's in ITM, specializing in System Administration.</li>
         <li>Start my career as soon as I graduate college</li>
@@ -27,11 +27,10 @@
         <li>Start a family!</li>
         <li>Retire at a reasonable age and travel the world with my family</li>
       </ul>
-  </section>
-</main>
-<footer>
-  By Davon Branch
-  Contact me @dbranch2@hawk.iit.edu
-</footer>
+    </section>
+  </main>
+  <footer id="footer">
+    <p>By Davon Branch Contact me @dbranch2@hawk.iit.edu</p>
+  </footer>
 </body>
 </html>
