added id attributes and fixed semanctics/spacing

--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
 <body>
   <header id="header">
     <h1>Davon Branch</h1>
-    <nav>
+    <nav id="navigation">
       <ul>
         <li><a href="../">Home</a></li>
         <li><a href="../resume/">Resume</a></li>
@@ -17,10 +17,10 @@
       </ul>
     </nav>
   </header>
-<main>
-  <h2>RESUME</h2>
-  <section>
-    <h3>Education</h3>
+  <main id="content">
+    <h2>RESUME</h2>
+    <section>
+      <h3>Education</h3>
       <ul>
         <li>Illinois Institute of Technology
           <ul>
@@ -35,59 +35,58 @@
           </ul>
         </li>
       </ul>
-  </section>
-  <section>
-    <h3>Work experience</h3>
-    <ul>
-      <li>Junior Lab Assisstant for School of Applied Technology
-        <ul>
-          <li>Swap hard drives for different classes during the day</li>
-          <li>Help students with computer problems</li>
-          <li>Work with different workstations/servers like FOG</li>
-          <li>Organize and clean storage and lab</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-  <section>
-    <h3>Accomplishments</h3>
-    <ul>
-      <li>Dean's List
-        <ul>
-          <li>Fall 2016 and Spring 2017 semester</li>
-          <li>Awarded to students whose semester GPA is 3.50 or better</li>
-        </ul>
-      </li>
-      <li>Illinois State Scholar
-        <ul>
-          <li>Senior year of high school</li>
-          <li>Awarded to students who ranked top 10 of their class</li>
-        </ul>
-      </li>
-      <li>Section leader of trumpet section
-        <ul>
-          <li>Senior year of high school</li>
-          <li>Awarded to someone that shows excellent skills on their instrument</li>
-          <li>Attends practice daily and performances</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-  <section>
-    <h3>Traits</h3>
-    <ul>
-      <li>Hardworking</li>
-      <li>Determined</li>
-      <li>Confident</li>
-      <li>Honest</li>
-      <li>Loyal</li>
-      <li>Team player</li>
-    </ul>
-  </section>
-</main>
-<footer>
-  By Davon Branch
-  Contact me @dbranch2@hawk.iit.edu
-</footer>
+    </section>
+    <section>
+      <h3>Work experience</h3>
+      <ul>
+        <li>Junior Lab Assisstant for School of Applied Technology
+          <ul>
+            <li>Swap hard drives for different classes during the day</li>
+            <li>Help students with computer problems</li>
+            <li>Work with different workstations/servers like FOG</li>
+            <li>Organize and clean storage and lab</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>Accomplishments</h3>
+      <ul>
+        <li>Dean's List
+          <ul>
+            <li>Fall 2016 and Spring 2017 semester</li>
+            <li>Awarded to students whose semester GPA is 3.50 or better</li>
+          </ul>
+        </li>
+        <li>Illinois State Scholar
+          <ul>
+            <li>Senior year of high school</li>
+            <li>Awarded to students who ranked top 10 of their class</li>
+          </ul>
+        </li>
+        <li>Section leader of trumpet section
+          <ul>
+            <li>Senior year of high school</li>
+            <li>Awarded to someone that shows excellent skills on their instrument</li>
+            <li>Attends practice daily and performances</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>Traits</h3>
+      <ul>
+        <li>Hardworking</li>
+        <li>Determined</li>
+        <li>Confident</li>
+        <li>Honest</li>
+        <li>Loyal</li>
+        <li>Team player</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>By Davon Branch Contact me @dbranch2@hawk.iit.edu</p>
+  </footer>
 </body>
 </html>
