included a new img to website

--- a/index.html
+++ b/index.html
@@ -60,15 +60,21 @@
     <section>
       <h3>PICTURES</h3>
       <figure>
-        <img src="clearwater.JPG" alt="Pic of palm trees"/>
+        <img src="imgs/clearwater.JPG" alt="Pic of palm trees"/>
         <figcaption>
           Scenery of Clear Water Beach, Florida.
         </figcaption>
       </figure>
       <figure>
-        <img src="water.JPG" alt="Arriving to the beach"/>
+        <img src="imgs/water.JPG" alt="Arriving to the beach"/>
         <figcaption>
           A picture of us arriving to the beach front.
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="imgs/sunset.JPG" alt="sun setting"/>
+        <figcaption>
+          A view of the sun setting.
         </figcaption>
       </figure>
     </section>
