changed uppercase headings to standard title case

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>ABOUT DAVON</title>
+  <title>About Davon</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" href="screen.css"/>
 </head>
@@ -18,9 +18,9 @@
     </nav>
   </header>
   <main id="content">
-    <h2>ABOUT ME</h2>
+    <h2>About Me</h2>
     <section>
-      <h3>INTRODUCTION</h3>
+      <h3>Introduction</h3>
       <ul>
         <li>My name is Davon Branch</li>
         <li>I am a second year Information Technology and Management major at Illinois Institute of Technology.</li>
@@ -28,7 +28,7 @@
       </ul>
     </section>
     <section>
-      <h3>WHAT I LIKE TO DO</h3>
+      <h3>What I Like To Do</h3>
       <ul>
         <li>Learn new skills</li>
         <li>Play trumpet
@@ -58,7 +58,7 @@
       </ul>
     </section>
     <section>
-      <h3>PICTURES</h3>
+      <h3>Pictures</h3>
       <figure>
         <img src="imgs/clearwater.JPG" alt="Pic of palm trees"/>
         <figcaption>
