changed uppercase headings to standard title case

--- a/goals/index.html
+++ b/goals/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>DAVON'S GOALS</title>
+  <title>Davon's Goals</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" href="screen.css"/>
 </head>
@@ -19,7 +19,7 @@
   </header>
   <main id="content">
     <section>
-      <h2>LIFE GOALS</h2>
+      <h2>Life Goals</h2>
       <ul>
         <li>Graduate with a Master's in ITM, specializing in System Administration.</li>
         <li>Start my career as soon as I graduate college</li>
