changed uppercase headings to standard title case

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>DAVON'S RESUME</title>
+  <title>Davon's Resume</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" href="screen.css"/>
 </head>
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <main id="content">
-    <h2>RESUME</h2>
+    <h2>Resume</h2>
     <section>
       <h3>Education</h3>
       <ul>
